<resources>
    <string name="app_name">Movies App</string>
    <string name="search">Search</string>
    <string name="movies">Movies</string>
    <string name="popular">Popular Movies</string>
    <string name="popular1">POPULAR MOVIES</string>
    <string name="most_popular">Most Popular</string>
    <string name="now_playing">Now Playing</string>
    <string name="theaters">In Theaters</string>
    <string name="upcoming">Upcoming Movies</string>
    <string name="latest">Latest Movies</string>
    <string name="top_rated">Top Rated</string>
    <string name="view">View All</string>
    <string name="movie">Avengers</string>
    <string name="telugumovies">Telugu Movies</string>
    <string name="hindimovies">Hindi Movies</string>
    <string name="tamilmovies">Tamil Movies</string>
    <string name="kanadamovies">Kanada Movies</string>
    <string name="interteller">Intersteller</string>
    <string name="overview">Interstellar chronicles the adventures of a group of explorers
        who make use of a newly discovered wormhole to surpass the limitations on human
        space travel and conquer the vast distances involved in an interstellar voyage.
</string>
    <string name="movie_voting">299.795</string>
    <string name="geners">Action | Adventure | Science Friction</string>
    <string name="rating">6.2</string>
    <string name="rating1">Rating</string>
    <string name="movie_time">2hr 40min</string>
    <string name="director">Director : Chritopher Nolan</string>
    <string name="director_name">Chritopher Nolan</string>
    <string name="release_date">Release Date : 2014–11–05</string>
    <string name="release_data1">2014–11–05</string>
    <string name="movie_budget">Movie Budget : $165 Million</string>
    <string name="movie_budget_cost">$165 Million</string>
    <string name="movie_revenue">Movie Revenue : $487.1 Million</string>
    <string name="movie_revenue_cost">$487.1 Million</string>
    <string name="story_line">Story Line</string>
    <string name="NoData">No Data.....</string>
    <string name="drama">Drama</string>
    <string name="recommed_movies">Recommed Movies</string>
    <string name="cast">Cast</string>
    <string name="share">Share</string>
    <string name="my_list">My List</string>
    <string name="download">Download</string>
    <string name="save_info">Save Info</string>
    <string name="biography_text">Robert John Downey Jr. (born April 4, 1965) is an American actor and producer.
        Downey made his screen debut in 1970, at the ages of five, when he appeared in his father\'s film Pound,
        and has worked consistently in film and television ever since. He received two Academy Award nominations
        for his roles in films Chaplin (1992) and Tropic Thunder (2008). Downey Jr. is most known for his
        role in the Marvel Cinematic Universe as Tony Stark/Iron Man. He has appeared as the character in
        Iron Man (2008), The Incredible Hulk (2008), Iron Man 2 (2010), The Avengers (2012), Iron Man 3 (2013),
        Avengers: Age of Ultron (2015), Captain America: Civil War (2016), Spider-Man: Homecoming (2017),
        Avengers: Infinity War (2018), and Avengers: Endgame (2019).
</string>
    <string name="gender">Gender</string>
    <string name="known_for">Known For</string>
    <string name="acting">Acting</string>
    <string name="birthday">Birthday</string>
    <string name="dob">1965-04-04 (56 years old)</string>
    <string name="place_of_birth">Place of Birth</string>
    <string name="manhattan_new_york_usa">Manhattan, New York, USA</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="no_data">-------</string>
    <string name="biography">Biography</string>
    <string name="about_movie_label">About Movie</string>
    <string name="status">Status:</string>
    <string name="budget">Budget:</string>
    <string name="revenue">Revenue:</string>
    <string name="filter">Filter</string>
    <string name="no_internet_connection">Opps! No Internet Connection, Please check it..</string>
    <string name="search_movies">Search movies</string>
    <string name="search_icon">search_icon</string>


</resources>
