<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Movie_Page_Activity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/rl2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <androidx.cardview.widget.CardView
                android:id="@+id/backdropcard"
                android:layout_width="match_parent"
                android:layout_height="230dp">

                <ImageView
                    android:id="@+id/backdrop"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@null"
                    android:scaleType="centerCrop"
                     />

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/poster"
                android:layout_width="120dp"
                android:layout_height="180dp"
                android:layout_below="@+id/backdropcard"
                android:layout_marginStart="20dp"
                android:layout_marginTop="-40dp"
                android:translationZ="5dp">

                <ImageView
                    android:id="@+id/posterImg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@null" />

            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/movietitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/backdropcard"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@+id/poster"
                android:fontFamily="@font/nexa_slab_regular"
                android:maxLines="2"
                android:text="@string/interteller"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/runtime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/movietitle"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/poster"
                android:text="@string/movie_time"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/movie_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/runtime"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/poster"
                android:drawableRight="@drawable/star"
                android:text="@string/rating"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/movie_rating1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/movie_rating"
                android:layout_marginLeft="10dp"
                android:layout_toEndOf="@+id/poster"
                android:text="@string/rating1" />

            <TextView
                android:id="@+id/movie_genres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/poster"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:maxLines="2"
                android:text="@string/geners"
                android:textColor="@color/lightblack" />


            <TextView
                android:id="@+id/director"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/movie_genres"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/liberationserif_regular"
                android:text="@string/director"
                android:textColor="#000" />

            <TextView
                android:id="@+id/release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/director"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/liberationserif_regular"
                android:text="@string/release_date"
                android:textColor="#000" />

            <TextView
                android:id="@+id/movie_budget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/release_date"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/liberationserif_regular"
                android:text="@string/movie_budget"
                android:textColor="#000" />

            <TextView
                android:id="@+id/movie_revenue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/movie_budget"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/liberationserif_regular"
                android:text="@string/movie_revenue"
                android:textColor="#000" />

            <TextView
                android:id="@+id/storyline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/movie_revenue"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/story_line"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/storyline"
                android:layout_margin="10dp"
                android:background="@drawable/tv4_bg"
                android:fontFamily="@font/liberationserif_regular"
                android:padding="10dp"
                android:text="@string/overview"
                android:textAlignment="textStart"
                android:textColor="#000" />

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</layout>